# CreditSim

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/application/commands/: __init__.py  create_credit_simulation_command.py
backend/src/backend/application/messages/: __init__.py  create_credit_simulation_message.py  read_credit_simulation_message.py
backend/src/backend/application/queries/: __init__.py  read_credit_simulation_query.py
backend/src/backend/application/validators/: __init__.py  create_credit_simulation_validator.py  read_credit_simulation_validator.py
backend/src/backend/domain/entities/: __init__.py  base.py  credit_sim.py
backend/src/backend/domain/ports/: __init__.py  abstractions.py  repositories.py  unit_of_work.py
backend/src/backend/infrastructure/adapters/: adapter.py  credit_simulation_adapter.py
backend/src/backend/infrastructure/data/: __init__.py  data.db  m_000000000000_base.py
backend/src/backend/infrastructure/integrations/: __init__.py  risk_audit.py
backend/src/backend/tools/: __init__.py  engine.py  validator.py
backend/src/backend/webapi/endpoints/: __init__.py  migrate.py  read_simulation.py  register.py  simulation.py
backend/src/backend/webapi/models/: __init__.py  credit_simulation.py  credit_simulation_model.py  new_credit_simulation.py
core/: pyproject.toml
core/src/core/: app.py
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: Message.dto.ts  (+5 more)
(+13 files in other folders)
